2009-05-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-object.c (mb_wm_object_init): Do not allocate
	ObjectClasses and ObjectClassesInfo every time the function is called.

	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): Free decor list
	after unreffing the objects in the list.

2009-05-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_free): Stop
	reconfiguring windows once a window covering the whole screen was
	encountered in the stack. Fixes: NB#117392

2009-05-18  Daniel Elstner  <danielk@openismus.com>

        * matchbox/core/mb-wm.h: Do not define _GNU_SOURCE here, as this is
        a public header file.  Also, the header itself doesn't actually need
        this feature macro.
        * util/matchbox-remote.c: Remove _GNU_SOURCE from here, too.
        * configure.ac: Invoke the Autoconf macro AC_USE_SYSTEM_EXTENSIONS
        to define feature macros such as _GNU_SOURCE automatically.
        (AC_PREREQ): Increase Autoconf version requirement to 2.60.

2009-05-18  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.39

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_destroy): Set window_damage to NULL
	after destroying it.
	(mb_wm_comp_mgr_clutter_handle_damage): Trap X error in absense of a
	better fix. Fixes: NB#116072

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Trap X errors coming during
	XSync call. Those often come when toggling 'offline mode' in power
	menu.

2009-05-15  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere to fix NB#103219:
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	Update _NET_WORKAREA according to the window's geometry (minus the
	frame). 

	* matchbox/core/mb-wm-client.c (mb_wm_client_hide): Always update
	'mapped' even if the hide virtual function is not implemented.
